--- a/Software/HexPi/HexPi/HexPi.csproj
+++ b/Software/HexPi/HexPi/HexPi.csproj
@@ -100,6 +100,7 @@
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
     <Compile Include="Controller.cs" />
+    <Compile Include="Hexapod.cs" />
     <Compile Include="ILeg.cs" />
     <Compile Include="LeftLeg.cs" />
     <Compile Include="MainPage.xaml.cs">
